# 5560Assignment

./: .gitignore
5560hw2/: Dockerfile  api_main.py  main_cnn.py  requirements.txt
5560hw2/artifacts/: cnn_best.pt
5560hw2/helper_lib/: data_loader.py  evaluator.py  generator.py  model.py  trainer.py  visualize_results.py
5560hw3/: Dockerfile  api_main_gan.py  main_vae.py  preview_gan_samples.py  pyproject.toml  requirements.txt  train_gan_main.py
5560hw3/artifacts/: cnn_best.pt  gan_generator.pt  gan_generator_epoch10.pt  gan_generator_epoch15.pt  gan_generator_epoch5.pt
5560hw3/helper_lib/: generator.py  model.py  trainer.py  utils.py
